eks-practice-materials/kustomize-practice/sample/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: kustomize-sample
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: my-nginx
          image: my-nginx:v1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
      restartPolicy: Always
