eks-practice-materials/kustomize-practice/sample/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: kustomize-sample
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
